@@ -6,5 +6,4 @@ This attempts to remove the common issue of hostranged execution
 timing out due to several nodes being removed from service in a large
 cluster.  The
 .B ipmidetectd 
-daemon must be running on the node executing the command.  See
-HOSTRANGED SUPPORT below for additional information.
+daemon must be running on the node executing the command.
