@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: ipmipower.conf.5.in,v 1.45 2008-04-04 23:52:31 chu11 Exp $
+.\"$Id: ipmipower.conf.5.in,v 1.46 2008-04-05 12:43:53 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2003-2007 The Regents of the University of California.
@@ -122,6 +122,9 @@ Specify if buffer-output functionality is enabled or disabled by default.
 .TP
 \fBconsolidate-output\fR \fIENABLE|DISABLE\fR
 Specify if consolidate-output functionality is enabled or disabled by default.
+.TP
+\fBfanout\fR \fICOUNT\fR
+Specify a fanout.
 .TP
 \fBeliminate\fR \fIENABLE|DISABLE\fR
 Specify if eliminate functionality is enabled or disabled by default.
