@@ -19,6 +19,7 @@ o Support -e (--escape-char) for alternate escape character in
 o Change --wait-until-off short option from -B to -G.
 o Support -B in ipmipower for consistency to other tools, although -B offers
   no purpose in ipmipower.
+o Support -F in ipmipower for consistency to other tools.
 o Enhanced speed of ipmi-fru, by skipping unnecessary FRU data reads.
 o SSIF Inband driver will timeout after a certain period of time.
 o Support additional sensor monitoring interpretations in ipmimonitoring.
